# wstools

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.mdown  README.rst  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test  tox  tox.ini
.github/workflows/: pythonpackage.yml
src/wstools/: Utility.py  XMLSchema.py
src/wstools/tests/: config.txt  test_wsdl.py
tests/: README  config.txt  test_t1.py  test_wsdl.py  test_wstools.py  test_wstools_net.py
tests/data/: ip2geo.wsdl  soapi-1.63.0-dlw.wsdl  soapi-1.63.0-re.wsdl  zip2geo.wsdl
wstools/: Namespaces.py  TimeoutSocket.py  UserTuple.py  Utility.py  WSDLTools.py  XMLSchema.py  XMLname.py  c14n.py
