[metadata]
description-file = README

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[pytest]
norecursedirs = . .git .svn tox _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --ignore=setup.py --tb=long -rsxX -v --maxfail=10 tests
# remove "--flake8" due to weir errors
timeout=60
# --maxfail=2 -n4
# -n4              runs up to 4 parallel procs
# --maxfail=2      fail fast, dude
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
rsyncdirs = . demo docs
rsyncignore = .hg .git
flake8-max-line-length = 99
#flake8-ignore=D,D102
flake8-ignore=D D102

[flake8]
max-line-length=160
exclude=build
statistics=yes
ignore=D,E402
